# mhxy-hp-overlay

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  RESEARCH.md
docs/plans/: 2026-05-05-mvp-plan.md
scripts/: generate_fixture.py
src/mhxy_hp_overlay/: __init__.py  analyzer.py  capture.py  cli.py  compliance.py  damage.py  models.py  roi.py
tests/: test_analyzer.py  test_cli.py  test_compliance.py  test_damage.py  test_roi.py
