[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhxy-hp-overlay"
version = "0.1.0"
description = "Compliant visible-screen HP estimator for 梦幻西游手游 on macOS/MuMu"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "JKevinXu"}]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "Pillow>=10.0",
  "typer>=0.12",
  "rich>=13.0",
  "mss>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
mhxy-hp = "mhxy_hp_overlay.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
